[package]
name = "ref_lp_lockup_factory"
version = "0.1.0"
edition = "2021"
authors = ["Slimedragon <4sliman4@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
near-sdk = { git = "https://github.com/near/near-sdk-rs", features = ["unstable"] }

[profile.release]
codegen-units = 1
opt-level = "z"
lto = true
debug = false
panic = "abort"
overflow-checks = true
